# f5rail

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.rs
.github/workflows/: build.yml  tasks.yml
bat/: DRAW.bat  EXPORT.bat  SIN.bat  TRACK-0.bat  TRACK-X.bat  TRACK.bat  TRANSITION.bat
bat/sub/: TRACK-0.bat  TRACK-N.bat  TRACK-SAVE.bat  TRACK-X.bat
bin-utf8/: SIN.bat
distribution/: Cargo.toml
distribution/src/: bat.rs  dir.rs  main.rs
distro/: Cargo.toml
draw/: Cargo.toml
draw/src/: main.rs
jwwio/: Cargo.toml
jwwio/examples/: stdin.rs
jwwio/src/: lib.rs
jwwio/tests/: file.rs
src/: app.rs  bve.rs  cad.rs  cg.rs  factory.rs  jww.rs  lib.rs  main.rs  track.rs  transition.rs  unit.rs
src/agent/: bat.rs  bat_0.rs  batch.rs  bve.rs  figure.rs  jwc_temp.rs  jww.rs  mod.rs  sjis.rs  test.rs
src/format/: args.rs  jwc_temp.rs  mod.rs
src/geo/: transition.rs
src/io/: args.rs  mod.rs  param.rs
src/jww/: jww_temp.rs  mod.rs  param.rs
src/track/: app.rs  axis.rs  mod.rs  polyline.rs  relative.rs  space.rs
src/track_/: axis.rs
src/transition/: app.rs  canvas.rs  curve.rs  distance.rs  divider.rs  formula.rs  mod.rs  param.rs  polyline.rs  segment.rs  spiral.rs  test.rs  tests.rs  unit.rs  xy.rs
tests/: args.rs  relative.rs  track.rs  transition.rs
