[package]
name = "f5rail"
version = "0.2.0"
edition = "2021"
default-run = "make"

[profile.release]
# lto = true      # -22KB (slow)
# panic = 'abort' # -9KB

[dependencies]
anyhow = "1.0.54"
derive_more = "0.99.17"
encoding_rs = "0.8.30" # +165KB
encoding_rs_io = "0.1.7"
time = "0.3.9"
zip = { version = "0.6.2", default-features = false, features = ["deflate", "time"] }

[dev-dependencies]
rstest = "0.12.0"
tempfile = "3.3.0"
