[workspace]
members = ["distro", "jwwio"]

[workspace.package]
version = "0.2.0"
edition = "2021"

[package]
name = "f5rail"
version.workspace = true
edition.workspace = true
default-run = "f5rail"

[profile.release]
# lto = true      # -22KB (slow)
# panic = 'abort' # -9KB

[dependencies]
anyhow = "1.0.54"
derive_more = "0.99.17"
encoded = "0.4.0"
encoding_rs = "0.8.31" # +165KB
encoding_rs_io = "0.1.7"
rfd = "0.10.0"

[dev-dependencies]
rstest = "0.12.0"
tempfile = "3.3.0"
